Fixed "Internationalisation" being too long for mobile screens

--- a/components/Posts/Prose.module.scss
+++ b/components/Posts/Prose.module.scss
@@ -147,7 +147,7 @@
     }
 
     h2 {
-        font-size: 2em;
+        font-size: 1.75em;
         // font-size: 1.5em;
         margin-top: 2em;
         margin-bottom: 1em;
